--- a/package.json
+++ b/package.json
@@ -2,18 +2,25 @@
   "name": "riot-router",
   "version": "0.3.0",
   "description": "A routing solution for Riot",
-  "main": "router.js",
+  "main": "lib/router.min.js",
   "directories": {
     "example": "examples",
     "test": "test"
   },
   "dependencies": {},
   "devDependencies": {
+    "babel-core": "^5.5.6",
+    "babel-loader": "^5.1.4",
     "mocha": "^2.2.5",
-    "riot": "^2.1.0"
+    "node-libs-browser": "^0.5.2",
+    "riot": "^2.1.0",
+    "webpack": "^1.9.10"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "watch": "webpack --watch router.js lib/router.js",
+    "build": "webpack --devtool source-maps router.js lib/router.js && COMPRESS=1 webpack --devtool source-maps router.js lib/router.min.js",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -27,5 +34,8 @@
   "bugs": {
     "url": "https://github.com/gabrielmoreira/riot-router/issues"
   },
-  "homepage": "https://github.com/gabrielmoreira/riot-router#readme"
+  "homepage": "https://github.com/gabrielmoreira/riot-router#readme",
+  "files": [
+    "lib/router.js", "lib/router.min.js", "lib/router.js.map", "lib/router.js.min.map", "LICENSE"
+  ]
 }
