--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "example": "examples",
     "test": "test"
   },
-  "dependencies": {},
+  "dependencies": {
+    "extend": "^2.0.1"
+  },
   "devDependencies": {
     "babel-core": "^5.5.6",
     "babel-loader": "^5.1.4",
@@ -36,6 +38,10 @@
   },
   "homepage": "https://github.com/gabrielmoreira/riot-router#readme",
   "files": [
-    "lib/router.js", "lib/router.min.js", "lib/router.js.map", "lib/router.js.min.map", "LICENSE"
+    "lib/router.js",
+    "lib/router.min.js",
+    "lib/router.js.map",
+    "lib/router.js.min.map",
+    "LICENSE"
   ]
 }
