--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "riot-router",
-  "version": "0.5.0",
+  "version": "0.6.0",
   "description": "A routing solution for Riot",
   "main": "lib/router.min.js",
   "directories": {
@@ -8,18 +8,19 @@
     "test": "test"
   },
   "dependencies": {
-    "extend": "^2.0.1"
+    "extend": "^3.0.0"
   },
   "devDependencies": {
-    "babel-core": "^5.5.6",
-    "babel-loader": "^5.1.4",
+    "babel-core": "^5.6.17",
+    "babel-loader": "^5.3.1",
     "mocha": "^2.2.5",
     "node-libs-browser": "^0.5.2",
-    "riot": "^2.1.0",
-    "webpack": "^1.9.10"
+    "riot": "^2.2.2-beta",
+    "webpack": "^1.10.1"
   },
   "scripts": {
     "test": "mocha",
+    "test:watch": "mocha --watch",
     "watch": "webpack --watch router.js lib/router.js",
     "build": "webpack --devtool source-maps router.js lib/router.js && COMPRESS=1 webpack --devtool source-maps router.js lib/router.min.js",
     "prepublish": "npm run build"
