--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "extend": "^3.0.0"
   },
   "devDependencies": {
-    "babel-core": "^5.6.17",
-    "babel-loader": "^5.3.1",
+    "babel-core": "^5.8.23",
+    "babel-loader": "^5.3.2",
     "mocha": "^2.2.5",
     "node-libs-browser": "^0.5.2",
-    "riot": "^2.2.2-beta",
-    "webpack": "^1.10.1",
+    "riot": "^2.2.4",
+    "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
   },
   "scripts": {
