--- a/package.json
+++ b/package.json
@@ -13,15 +13,23 @@
   "devDependencies": {
     "babel-core": "^5.8.23",
     "babel-loader": "^5.3.2",
+    "karma": "^0.13.10",
+    "karma-mocha": "^0.2.0",
+    "karma-mocha-reporter": "^1.1.1",
+    "karma-phantomjs-launcher": "^0.2.1",
+    "karma-riot": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.5",
+    "karma-webpack": "^1.7.0",
     "mocha": "^2.2.5",
     "node-libs-browser": "^0.5.2",
+    "phantomjs": "^1.9.18",
     "riot": "^2.2.4",
     "webpack": "^1.12.0",
     "webpack-dev-server": "^1.10.1"
   },
   "scripts": {
-    "test": "mocha",
-    "test:watch": "mocha --watch",
+    "test": "node_modules/.bin/karma start --single-run",
+    "test:watch": "node_modules/.bin/karma start --auto-watch",
     "watch": "webpack --watch router.js lib/router.js",
     "build": "webpack --devtool source-maps router.js lib/router.js && COMPRESS=1 webpack --devtool source-maps router.js lib/router.min.js",
     "start": "webpack-dev-server",
