--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
     "babel-plugin-transform-es2015-typeof-symbol": "^6.3.13",
     "babel-plugin-transform-es2015-unicode-regex": "^6.3.13",
     "babel-plugin-transform-regenerator": "^6.3.13",
+    "babel-preset-es2015": "^6.6.0",
+    "imports-loader": "^0.6.5",
     "karma": "^0.13.10",
-    "karma-chrome-launcher": "^0.2.2",
     "karma-mocha": "^0.2.0",
     "karma-mocha-reporter": "^1.1.1",
     "karma-phantomjs-launcher": "^0.2.1",
-    "karma-riot": "^1.0.0",
-    "karma-sourcemap-loader": "^0.3.5",
+    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.2.5",
     "node-libs-browser": "^0.5.2",
@@ -49,7 +49,7 @@
     "webpack-dev-server": "^1.10.1"
   },
   "scripts": {
-    "test": "echo ignore-tests || node_modules/.bin/karma start --single-run",
+    "test": "node_modules/.bin/karma start --single-run",
     "test:watch": "node_modules/.bin/karma start --auto-watch",
     "watch": "webpack --watch router.js lib/router.js",
     "build": "webpack --devtool source-maps router.js lib/router.js && COMPRESS=1 webpack --devtool source-maps router.js lib/router.min.js",
