--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-  plugins: [
+  "plugins": [
     "transform-es2015-template-literals",
     "transform-es2015-literals",
     "transform-es2015-function-name",
