--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "riot-router",
-  "version": "0.9.2",
+  "version": "0.9.3",
   "description": "A routing solution for Riot",
   "main": "dist/router.min.js",
   "directories": {
@@ -8,6 +8,11 @@
     "test": "test"
   },
   "dependencies": {
+    "extend": "^3.0.0",
+    "riot": "^3.0.7",
+    "riot-route": "^3.0.2"
+  },
+  "peerDependencies": {
     "extend": "^3.0.0",
     "riot": "^3.0.7",
     "riot-route": "^3.0.2"
