--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "riot-router",
-  "version": "0.9.6",
+  "version": "0.9.7",
   "description": "A routing solution for Riot",
-  "main": "router.js",
+  "main": "dist/router.min.js",
   "directories": {
     "example": "examples",
     "test": "test"
